# friture

./: CLAUDE.md  FRITURE_CPP_PORT_PLAN.md  README.md  TODO.md  WAV_LOADER_SUMMARY.md  install_deps.sh
examples/: test_fft.cpp  test_sdl2.cpp
friture-cpp/: .gitignore  CMakeLists.txt  README.md  SUMMARY.md  TODO.md  WAV_LOADER_SUMMARY.md  WINDOWS_BUILD.md
friture-cpp/examples/: CMakeLists.txt  pipeline_test.cpp  test_eigen.cpp  test_portaudio.cpp
friture-cpp/include/friture/: application.hpp  frequency_resampler.hpp  ringbuffer.hpp  types.hpp
friture-cpp/include/friture/audio/: audio_device_info.hpp  audio_file_loader.hpp
friture-cpp/include/friture/ui/: text_renderer.hpp
friture-cpp/samples/: generate_test_wavs  generate_test_wavs.cpp
friture-cpp/src/: CMakeLists.txt  application.cpp  main.cpp
friture-cpp/src/audio/: CMakeLists.txt  audio_engine.cpp  audio_file_loader.cpp
friture-cpp/src/processing/: CMakeLists.txt  fft_processor.cpp  frequency_resampler.cpp
friture-cpp/src/rendering/: CMakeLists.txt  spectrogram_image.cpp
friture-cpp/src/ui/: CMakeLists.txt
friture-cpp/tests/: CMakeLists.txt  placeholder_test.cpp
friture-cpp/tests/unit/: CMakeLists.txt  audio_file_loader_test.cpp  color_transform_test.cpp  fft_processor_test.cpp  settings_test.cpp
include/friture/: application.hpp  color_transform.hpp  fft_processor.hpp  settings.hpp  spectrogram_image.hpp
include/friture/audio/: audio_engine.hpp
samples/: README.md
scripts/: convert_cmrmap.py
src/: main.cpp
src/audio/: CMakeLists.txt  audio_engine.cpp
src/processing/: color_transform.cpp
src/ui/: CMakeLists.txt  text_renderer.cpp
tests/unit/: CMakeLists.txt  audio_file_loader_test.cpp  frequency_resampler_test.cpp  ringbuffer_test.cpp  spectrogram_image_test.cpp  text_renderer_test.cpp
